improved swagger docs
